SBVTestSuite/TestSuite/CompileTests/PCase/PCase01.stderr
PCase01.hs:13:15: error: [GHC-39584]
    " PCase01.hs:13:21: Parse error: EOF

    " In the quasi-quotation: [pCase| _e of|]
   |
13 | t _e = [pCase| _e of|]
   |               ^^^^^^^^

